fix: Login error message are now localized